* added "javaScriptEscape" attribute to MessageTag, to apply JavaScript escaping to output texts
* added EscapeBodyTag class aka "spring:escapeBody", allowing to HTML- and/or JavaScript-escape enclosed body content
* added JavaScriptUtils class to util package, containing generic code for JavaScript escaping


Changes in version 1.1 final (5.9.2004)
---------------------------------------

Package org.springframework.aop
* ProxyFactoryBean returns full target class as object type in case of a singleton
* ProxyFactoryBean avoids unnecessary creation of prototype bean just for advisor chain initialization
* reworked AbstractPrototypeBasedTargetSource's target class check to look for bean class on BeanDefinition first
* deprecated ThreadLocalTargetSourceStats "getObjects"/"getHits" etc in favor of "getObjectCount"/"getHitCount" etc
* renamed Jdk14RegexpMethodPointcut to JdkRegexpMethodPointcut, for consistent class naming throughout the framework

Package org.springframework.beans
* reworked BeanWrapperImpl's property-specific custom editor handling to allow registration for uninitialized subpaths
* refined BeanWrapperImpl's "findCustomEditor" to consider editors registered for all path variations without index/key
* CustomDateEditor, CustomNumberEditor, StringTrimmerEditor implement "getAsText" to return empty String for null value
* deprecated PagedListHolder's "getNrOfPages" in favor of "getPageCount" (for consistent method naming)
* deprecated ConstructorArgumentValues' "getNrOfArguments" in favor of "getArgumentCount" (for consistent method naming)
* added "applyBeanPropertyValues" method to AutowireCapableBeanFactory, for populating an existing bean instance
* moved "getBeanDefinition" method from ConfigurableBeanFactory down to ConfigurableListableBeanFactory interface
* added "getBeanClass", "isAbstract", "isSingleton", "isLazyInit" methods to BeanDefinition interface